parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NOT

Grammar

Rule 0     S' -> query
Rule 1     query -> select
Rule 2     query -> update
Rule 3     query -> insert
Rule 4     query -> delete
Rule 5     update -> UPDATE table SET column = expression
Rule 6     update -> UPDATE table SET column = expression WHERE conlist
Rule 7     insert -> INSERT INTO table VALUES LPAR expressions RPAR
Rule 8     insert -> INSERT INTO table LPAR columns RPAR VALUES LPAR expressions RPAR
Rule 9     delete -> DELETE FROM tables
Rule 10    delete -> DELETE FROM tables WHERE conlist
Rule 11    select -> SELECT columns FROM tables WHERE conlist ORDER BY columns
Rule 12    select -> SELECT columns FROM tables WHERE conlist ORDER BY columns order_type
Rule 13    select -> SELECT columns FROM tables WHERE conlist
Rule 14    select -> SELECT columns FROM tables ORDER BY columns
Rule 15    select -> SELECT columns FROM tables ORDER BY columns order_type
Rule 16    select -> SELECT columns FROM tables
Rule 17    select -> SELECT expression
Rule 18    select -> SELECT expression FROM tables
Rule 19    order_type -> ASC
Rule 20    order_type -> DESC
Rule 21    columns -> columns COMMA column
Rule 22    columns -> column
Rule 23    column -> *
Rule 24    column -> NAME
Rule 25    column -> NAME DOT NAME
Rule 26    aggregate -> SUM LPAR TEXT RPAR
Rule 27    aggregate -> AVG LPAR TEXT RPAR
Rule 28    aggregate -> MAX LPAR TEXT RPAR
Rule 29    aggregate -> MIN LPAR TEXT RPAR
Rule 30    aggregate -> COUNT LPAR TEXT RPAR
Rule 31    tables -> table
Rule 32    tables -> tables COMMA table
Rule 33    table -> NAME
Rule 34    table -> NAME AS NAME
Rule 35    conlist -> condition
Rule 36    conlist -> condition AND conlist
Rule 37    conlist -> condition OR conlist
Rule 38    conlist -> NAME BETWEEN number AND number
Rule 39    conlist -> NAME IN LPAR select RPAR
Rule 40    texts -> TEXT
Rule 41    value -> number
Rule 42    value -> aggregate
Rule 43    value -> texts
Rule 44    condition -> column > value
Rule 45    condition -> column < value
Rule 46    condition -> column = value
Rule 47    condition -> column > column
Rule 48    condition -> column < column
Rule 49    condition -> column = column
Rule 50    number -> int
Rule 51    number -> double
Rule 52    int -> INTEGER
Rule 53    double -> DOUBLE
Rule 54    expressions -> expressions COMMA expression
Rule 55    expressions -> expression
Rule 56    expression -> expression + expression
Rule 57    expression -> expression - expression
Rule 58    expression -> expression * expression
Rule 59    expression -> expression / expression
Rule 60    expression -> value

Terminals, with rules where they appear

*                    : 23 58
+                    : 56
-                    : 57
/                    : 59
<                    : 45 48
=                    : 5 6 46 49
>                    : 44 47
AND                  : 36 38
AS                   : 34
ASC                  : 19
AVG                  : 27
BETWEEN              : 38
BY                   : 11 12 14 15
COMMA                : 21 32 54
COUNT                : 30
DELETE               : 9 10
DESC                 : 20
DOT                  : 25
DOUBLE               : 53
FROM                 : 9 10 11 12 13 14 15 16 18
IN                   : 39
INSERT               : 7 8
INTEGER              : 52
INTO                 : 7 8
LPAR                 : 7 8 8 26 27 28 29 30 39
MAX                  : 28
MIN                  : 29
NAME                 : 24 25 25 33 34 34 38 39
NOT                  : 
OR                   : 37
ORDER                : 11 12 14 15
RPAR                 : 7 8 8 26 27 28 29 30 39
SELECT               : 11 12 13 14 15 16 17 18
SET                  : 5 6
SUM                  : 26
TEXT                 : 26 27 28 29 30 40
UPDATE               : 5 6
VALUES               : 7 8
WHERE                : 6 10 11 12 13
error                : 

Nonterminals, with rules where they appear

aggregate            : 42
column               : 5 6 21 22 44 45 46 47 47 48 48 49 49
columns              : 8 11 11 12 12 13 14 14 15 15 16 21
condition            : 35 36 37
conlist              : 6 10 11 12 13 36 37
delete               : 4
double               : 51
expression           : 5 6 17 18 54 55 56 56 57 57 58 58 59 59
expressions          : 7 8 54
insert               : 3
int                  : 50
number               : 38 38 41
order_type           : 12 15
query                : 0
select               : 1 39
table                : 5 6 7 8 31 32
tables               : 9 10 11 12 13 14 15 16 18 32
texts                : 43
update               : 2
value                : 44 45 46 60

Parsing method: LALR

state 0

    (0) S' -> . query
    (1) query -> . select
    (2) query -> . update
    (3) query -> . insert
    (4) query -> . delete
    (11) select -> . SELECT columns FROM tables WHERE conlist ORDER BY columns
    (12) select -> . SELECT columns FROM tables WHERE conlist ORDER BY columns order_type
    (13) select -> . SELECT columns FROM tables WHERE conlist
    (14) select -> . SELECT columns FROM tables ORDER BY columns
    (15) select -> . SELECT columns FROM tables ORDER BY columns order_type
    (16) select -> . SELECT columns FROM tables
    (17) select -> . SELECT expression
    (18) select -> . SELECT expression FROM tables
    (5) update -> . UPDATE table SET column = expression
    (6) update -> . UPDATE table SET column = expression WHERE conlist
    (7) insert -> . INSERT INTO table VALUES LPAR expressions RPAR
    (8) insert -> . INSERT INTO table LPAR columns RPAR VALUES LPAR expressions RPAR
    (9) delete -> . DELETE FROM tables
    (10) delete -> . DELETE FROM tables WHERE conlist

    SELECT          shift and go to state 6
    UPDATE          shift and go to state 7
    INSERT          shift and go to state 8
    DELETE          shift and go to state 9

    query                          shift and go to state 1
    select                         shift and go to state 2
    update                         shift and go to state 3
    insert                         shift and go to state 4
    delete                         shift and go to state 5

state 1

    (0) S' -> query .



state 2

    (1) query -> select .

    $end            reduce using rule 1 (query -> select .)


state 3

    (2) query -> update .

    $end            reduce using rule 2 (query -> update .)


state 4

    (3) query -> insert .

    $end            reduce using rule 3 (query -> insert .)


state 5

    (4) query -> delete .

    $end            reduce using rule 4 (query -> delete .)


state 6

    (11) select -> SELECT . columns FROM tables WHERE conlist ORDER BY columns
    (12) select -> SELECT . columns FROM tables WHERE conlist ORDER BY columns order_type
    (13) select -> SELECT . columns FROM tables WHERE conlist
    (14) select -> SELECT . columns FROM tables ORDER BY columns
    (15) select -> SELECT . columns FROM tables ORDER BY columns order_type
    (16) select -> SELECT . columns FROM tables
    (17) select -> SELECT . expression
    (18) select -> SELECT . expression FROM tables
    (21) columns -> . columns COMMA column
    (22) columns -> . column
    (56) expression -> . expression + expression
    (57) expression -> . expression - expression
    (58) expression -> . expression * expression
    (59) expression -> . expression / expression
    (60) expression -> . value
    (23) column -> . *
    (24) column -> . NAME
    (25) column -> . NAME DOT NAME
    (41) value -> . number
    (42) value -> . aggregate
    (43) value -> . texts
    (50) number -> . int
    (51) number -> . double
    (26) aggregate -> . SUM LPAR TEXT RPAR
    (27) aggregate -> . AVG LPAR TEXT RPAR
    (28) aggregate -> . MAX LPAR TEXT RPAR
    (29) aggregate -> . MIN LPAR TEXT RPAR
    (30) aggregate -> . COUNT LPAR TEXT RPAR
    (40) texts -> . TEXT
    (52) int -> . INTEGER
    (53) double -> . DOUBLE

    *               shift and go to state 13
    NAME            shift and go to state 15
    SUM             shift and go to state 21
    AVG             shift and go to state 23
    MAX             shift and go to state 24
    MIN             shift and go to state 25
    COUNT           shift and go to state 26
    TEXT            shift and go to state 22
    INTEGER         shift and go to state 27
    DOUBLE          shift and go to state 28

    columns                        shift and go to state 10
    expression                     shift and go to state 11
    column                         shift and go to state 12
    value                          shift and go to state 14
    number                         shift and go to state 16
    aggregate                      shift and go to state 17
    texts                          shift and go to state 18
    int                            shift and go to state 19
    double                         shift and go to state 20

state 7

    (5) update -> UPDATE . table SET column = expression
    (6) update -> UPDATE . table SET column = expression WHERE conlist
    (33) table -> . NAME
    (34) table -> . NAME AS NAME

    NAME            shift and go to state 30

    table                          shift and go to state 29

state 8

    (7) insert -> INSERT . INTO table VALUES LPAR expressions RPAR
    (8) insert -> INSERT . INTO table LPAR columns RPAR VALUES LPAR expressions RPAR

    INTO            shift and go to state 31


state 9

    (9) delete -> DELETE . FROM tables
    (10) delete -> DELETE . FROM tables WHERE conlist

    FROM            shift and go to state 32


state 10

    (11) select -> SELECT columns . FROM tables WHERE conlist ORDER BY columns
    (12) select -> SELECT columns . FROM tables WHERE conlist ORDER BY columns order_type
    (13) select -> SELECT columns . FROM tables WHERE conlist
    (14) select -> SELECT columns . FROM tables ORDER BY columns
    (15) select -> SELECT columns . FROM tables ORDER BY columns order_type
    (16) select -> SELECT columns . FROM tables
    (21) columns -> columns . COMMA column

    FROM            shift and go to state 33
    COMMA           shift and go to state 34


state 11

    (17) select -> SELECT expression .
    (18) select -> SELECT expression . FROM tables
    (56) expression -> expression . + expression
    (57) expression -> expression . - expression
    (58) expression -> expression . * expression
    (59) expression -> expression . / expression

    $end            reduce using rule 17 (select -> SELECT expression .)
    RPAR            reduce using rule 17 (select -> SELECT expression .)
    FROM            shift and go to state 35
    +               shift and go to state 36
    -               shift and go to state 37
    *               shift and go to state 38
    /               shift and go to state 39


state 12

    (22) columns -> column .

    FROM            reduce using rule 22 (columns -> column .)
    COMMA           reduce using rule 22 (columns -> column .)
    RPAR            reduce using rule 22 (columns -> column .)
    ASC             reduce using rule 22 (columns -> column .)
    DESC            reduce using rule 22 (columns -> column .)
    $end            reduce using rule 22 (columns -> column .)


state 13

    (23) column -> * .

    FROM            reduce using rule 23 (column -> * .)
    COMMA           reduce using rule 23 (column -> * .)
    RPAR            reduce using rule 23 (column -> * .)
    ASC             reduce using rule 23 (column -> * .)
    DESC            reduce using rule 23 (column -> * .)
    $end            reduce using rule 23 (column -> * .)
    =               reduce using rule 23 (column -> * .)
    >               reduce using rule 23 (column -> * .)
    <               reduce using rule 23 (column -> * .)
    AND             reduce using rule 23 (column -> * .)
    OR              reduce using rule 23 (column -> * .)
    ORDER           reduce using rule 23 (column -> * .)


state 14

    (60) expression -> value .

    FROM            reduce using rule 60 (expression -> value .)
    +               reduce using rule 60 (expression -> value .)
    -               reduce using rule 60 (expression -> value .)
    *               reduce using rule 60 (expression -> value .)
    /               reduce using rule 60 (expression -> value .)
    $end            reduce using rule 60 (expression -> value .)
    RPAR            reduce using rule 60 (expression -> value .)
    WHERE           reduce using rule 60 (expression -> value .)
    COMMA           reduce using rule 60 (expression -> value .)


state 15

    (24) column -> NAME .
    (25) column -> NAME . DOT NAME

    FROM            reduce using rule 24 (column -> NAME .)
    COMMA           reduce using rule 24 (column -> NAME .)
    RPAR            reduce using rule 24 (column -> NAME .)
    ASC             reduce using rule 24 (column -> NAME .)
    DESC            reduce using rule 24 (column -> NAME .)
    $end            reduce using rule 24 (column -> NAME .)
    =               reduce using rule 24 (column -> NAME .)
    AND             reduce using rule 24 (column -> NAME .)
    OR              reduce using rule 24 (column -> NAME .)
    ORDER           reduce using rule 24 (column -> NAME .)
    DOT             shift and go to state 40


state 16

    (41) value -> number .

    FROM            reduce using rule 41 (value -> number .)
    +               reduce using rule 41 (value -> number .)
    -               reduce using rule 41 (value -> number .)
    *               reduce using rule 41 (value -> number .)
    /               reduce using rule 41 (value -> number .)
    $end            reduce using rule 41 (value -> number .)
    RPAR            reduce using rule 41 (value -> number .)
    WHERE           reduce using rule 41 (value -> number .)
    COMMA           reduce using rule 41 (value -> number .)
    AND             reduce using rule 41 (value -> number .)
    OR              reduce using rule 41 (value -> number .)
    ORDER           reduce using rule 41 (value -> number .)


state 17

    (42) value -> aggregate .

    FROM            reduce using rule 42 (value -> aggregate .)
    +               reduce using rule 42 (value -> aggregate .)
    -               reduce using rule 42 (value -> aggregate .)
    *               reduce using rule 42 (value -> aggregate .)
    /               reduce using rule 42 (value -> aggregate .)
    $end            reduce using rule 42 (value -> aggregate .)
    RPAR            reduce using rule 42 (value -> aggregate .)
    WHERE           reduce using rule 42 (value -> aggregate .)
    COMMA           reduce using rule 42 (value -> aggregate .)
    AND             reduce using rule 42 (value -> aggregate .)
    OR              reduce using rule 42 (value -> aggregate .)
    ORDER           reduce using rule 42 (value -> aggregate .)


state 18

    (43) value -> texts .

    FROM            reduce using rule 43 (value -> texts .)
    +               reduce using rule 43 (value -> texts .)
    -               reduce using rule 43 (value -> texts .)
    *               reduce using rule 43 (value -> texts .)
    /               reduce using rule 43 (value -> texts .)
    $end            reduce using rule 43 (value -> texts .)
    RPAR            reduce using rule 43 (value -> texts .)
    WHERE           reduce using rule 43 (value -> texts .)
    COMMA           reduce using rule 43 (value -> texts .)
    AND             reduce using rule 43 (value -> texts .)
    OR              reduce using rule 43 (value -> texts .)
    ORDER           reduce using rule 43 (value -> texts .)


state 19

    (50) number -> int .

    FROM            reduce using rule 50 (number -> int .)
    +               reduce using rule 50 (number -> int .)
    -               reduce using rule 50 (number -> int .)
    *               reduce using rule 50 (number -> int .)
    /               reduce using rule 50 (number -> int .)
    $end            reduce using rule 50 (number -> int .)
    RPAR            reduce using rule 50 (number -> int .)
    WHERE           reduce using rule 50 (number -> int .)
    COMMA           reduce using rule 50 (number -> int .)
    AND             reduce using rule 50 (number -> int .)
    OR              reduce using rule 50 (number -> int .)
    ORDER           reduce using rule 50 (number -> int .)


state 20

    (51) number -> double .

    FROM            reduce using rule 51 (number -> double .)
    +               reduce using rule 51 (number -> double .)
    -               reduce using rule 51 (number -> double .)
    *               reduce using rule 51 (number -> double .)
    /               reduce using rule 51 (number -> double .)
    $end            reduce using rule 51 (number -> double .)
    RPAR            reduce using rule 51 (number -> double .)
    WHERE           reduce using rule 51 (number -> double .)
    COMMA           reduce using rule 51 (number -> double .)
    AND             reduce using rule 51 (number -> double .)
    OR              reduce using rule 51 (number -> double .)
    ORDER           reduce using rule 51 (number -> double .)


state 21

    (26) aggregate -> SUM . LPAR TEXT RPAR

    LPAR            shift and go to state 41


state 22

    (40) texts -> TEXT .

    FROM            reduce using rule 40 (texts -> TEXT .)
    +               reduce using rule 40 (texts -> TEXT .)
    -               reduce using rule 40 (texts -> TEXT .)
    *               reduce using rule 40 (texts -> TEXT .)
    /               reduce using rule 40 (texts -> TEXT .)
    $end            reduce using rule 40 (texts -> TEXT .)
    RPAR            reduce using rule 40 (texts -> TEXT .)
    WHERE           reduce using rule 40 (texts -> TEXT .)
    COMMA           reduce using rule 40 (texts -> TEXT .)
    AND             reduce using rule 40 (texts -> TEXT .)
    OR              reduce using rule 40 (texts -> TEXT .)
    ORDER           reduce using rule 40 (texts -> TEXT .)


state 23

    (27) aggregate -> AVG . LPAR TEXT RPAR

    LPAR            shift and go to state 42


state 24

    (28) aggregate -> MAX . LPAR TEXT RPAR

    LPAR            shift and go to state 43


state 25

    (29) aggregate -> MIN . LPAR TEXT RPAR

    LPAR            shift and go to state 44


state 26

    (30) aggregate -> COUNT . LPAR TEXT RPAR

    LPAR            shift and go to state 45


state 27

    (52) int -> INTEGER .

    FROM            reduce using rule 52 (int -> INTEGER .)
    +               reduce using rule 52 (int -> INTEGER .)
    -               reduce using rule 52 (int -> INTEGER .)
    *               reduce using rule 52 (int -> INTEGER .)
    /               reduce using rule 52 (int -> INTEGER .)
    $end            reduce using rule 52 (int -> INTEGER .)
    RPAR            reduce using rule 52 (int -> INTEGER .)
    WHERE           reduce using rule 52 (int -> INTEGER .)
    COMMA           reduce using rule 52 (int -> INTEGER .)
    AND             reduce using rule 52 (int -> INTEGER .)
    OR              reduce using rule 52 (int -> INTEGER .)
    ORDER           reduce using rule 52 (int -> INTEGER .)


state 28

    (53) double -> DOUBLE .

    FROM            reduce using rule 53 (double -> DOUBLE .)
    +               reduce using rule 53 (double -> DOUBLE .)
    -               reduce using rule 53 (double -> DOUBLE .)
    *               reduce using rule 53 (double -> DOUBLE .)
    /               reduce using rule 53 (double -> DOUBLE .)
    $end            reduce using rule 53 (double -> DOUBLE .)
    RPAR            reduce using rule 53 (double -> DOUBLE .)
    WHERE           reduce using rule 53 (double -> DOUBLE .)
    COMMA           reduce using rule 53 (double -> DOUBLE .)
    AND             reduce using rule 53 (double -> DOUBLE .)
    OR              reduce using rule 53 (double -> DOUBLE .)
    ORDER           reduce using rule 53 (double -> DOUBLE .)


state 29

    (5) update -> UPDATE table . SET column = expression
    (6) update -> UPDATE table . SET column = expression WHERE conlist

    SET             shift and go to state 46


state 30

    (33) table -> NAME .
    (34) table -> NAME . AS NAME

    SET             reduce using rule 33 (table -> NAME .)
    VALUES          reduce using rule 33 (table -> NAME .)
    LPAR            reduce using rule 33 (table -> NAME .)
    WHERE           reduce using rule 33 (table -> NAME .)
    COMMA           reduce using rule 33 (table -> NAME .)
    $end            reduce using rule 33 (table -> NAME .)
    ORDER           reduce using rule 33 (table -> NAME .)
    RPAR            reduce using rule 33 (table -> NAME .)
    AS              shift and go to state 47


state 31

    (7) insert -> INSERT INTO . table VALUES LPAR expressions RPAR
    (8) insert -> INSERT INTO . table LPAR columns RPAR VALUES LPAR expressions RPAR
    (33) table -> . NAME
    (34) table -> . NAME AS NAME

    NAME            shift and go to state 30

    table                          shift and go to state 48

state 32

    (9) delete -> DELETE FROM . tables
    (10) delete -> DELETE FROM . tables WHERE conlist
    (31) tables -> . table
    (32) tables -> . tables COMMA table
    (33) table -> . NAME
    (34) table -> . NAME AS NAME

    NAME            shift and go to state 30

    tables                         shift and go to state 49
    table                          shift and go to state 50

state 33

    (11) select -> SELECT columns FROM . tables WHERE conlist ORDER BY columns
    (12) select -> SELECT columns FROM . tables WHERE conlist ORDER BY columns order_type
    (13) select -> SELECT columns FROM . tables WHERE conlist
    (14) select -> SELECT columns FROM . tables ORDER BY columns
    (15) select -> SELECT columns FROM . tables ORDER BY columns order_type
    (16) select -> SELECT columns FROM . tables
    (31) tables -> . table
    (32) tables -> . tables COMMA table
    (33) table -> . NAME
    (34) table -> . NAME AS NAME

    NAME            shift and go to state 30

    tables                         shift and go to state 51
    table                          shift and go to state 50

state 34

    (21) columns -> columns COMMA . column
    (23) column -> . *
    (24) column -> . NAME
    (25) column -> . NAME DOT NAME

    *               shift and go to state 13
    NAME            shift and go to state 15

    column                         shift and go to state 52

state 35

    (18) select -> SELECT expression FROM . tables
    (31) tables -> . table
    (32) tables -> . tables COMMA table
    (33) table -> . NAME
    (34) table -> . NAME AS NAME

    NAME            shift and go to state 30

    tables                         shift and go to state 53
    table                          shift and go to state 50

state 36

    (56) expression -> expression + . expression
    (56) expression -> . expression + expression
    (57) expression -> . expression - expression
    (58) expression -> . expression * expression
    (59) expression -> . expression / expression
    (60) expression -> . value
    (41) value -> . number
    (42) value -> . aggregate
    (43) value -> . texts
    (50) number -> . int
    (51) number -> . double
    (26) aggregate -> . SUM LPAR TEXT RPAR
    (27) aggregate -> . AVG LPAR TEXT RPAR
    (28) aggregate -> . MAX LPAR TEXT RPAR
    (29) aggregate -> . MIN LPAR TEXT RPAR
    (30) aggregate -> . COUNT LPAR TEXT RPAR
    (40) texts -> . TEXT
    (52) int -> . INTEGER
    (53) double -> . DOUBLE

    SUM             shift and go to state 21
    AVG             shift and go to state 23
    MAX             shift and go to state 24
    MIN             shift and go to state 25
    COUNT           shift and go to state 26
    TEXT            shift and go to state 22
    INTEGER         shift and go to state 27
    DOUBLE          shift and go to state 28

    expression                     shift and go to state 54
    value                          shift and go to state 14
    number                         shift and go to state 16
    aggregate                      shift and go to state 17
    texts                          shift and go to state 18
    int                            shift and go to state 19
    double                         shift and go to state 20

state 37

    (57) expression -> expression - . expression
    (56) expression -> . expression + expression
    (57) expression -> . expression - expression
    (58) expression -> . expression * expression
    (59) expression -> . expression / expression
    (60) expression -> . value
    (41) value -> . number
    (42) value -> . aggregate
    (43) value -> . texts
    (50) number -> . int
    (51) number -> . double
    (26) aggregate -> . SUM LPAR TEXT RPAR
    (27) aggregate -> . AVG LPAR TEXT RPAR
    (28) aggregate -> . MAX LPAR TEXT RPAR
    (29) aggregate -> . MIN LPAR TEXT RPAR
    (30) aggregate -> . COUNT LPAR TEXT RPAR
    (40) texts -> . TEXT
    (52) int -> . INTEGER
    (53) double -> . DOUBLE

    SUM             shift and go to state 21
    AVG             shift and go to state 23
    MAX             shift and go to state 24
    MIN             shift and go to state 25
    COUNT           shift and go to state 26
    TEXT            shift and go to state 22
    INTEGER         shift and go to state 27
    DOUBLE          shift and go to state 28

    expression                     shift and go to state 55
    value                          shift and go to state 14
    number                         shift and go to state 16
    aggregate                      shift and go to state 17
    texts                          shift and go to state 18
    int                            shift and go to state 19
    double                         shift and go to state 20

state 38

    (58) expression -> expression * . expression
    (56) expression -> . expression + expression
    (57) expression -> . expression - expression
    (58) expression -> . expression * expression
    (59) expression -> . expression / expression
    (60) expression -> . value
    (41) value -> . number
    (42) value -> . aggregate
    (43) value -> . texts
    (50) number -> . int
    (51) number -> . double
    (26) aggregate -> . SUM LPAR TEXT RPAR
    (27) aggregate -> . AVG LPAR TEXT RPAR
    (28) aggregate -> . MAX LPAR TEXT RPAR
    (29) aggregate -> . MIN LPAR TEXT RPAR
    (30) aggregate -> . COUNT LPAR TEXT RPAR
    (40) texts -> . TEXT
    (52) int -> . INTEGER
    (53) double -> . DOUBLE

    SUM             shift and go to state 21
    AVG             shift and go to state 23
    MAX             shift and go to state 24
    MIN             shift and go to state 25
    COUNT           shift and go to state 26
    TEXT            shift and go to state 22
    INTEGER         shift and go to state 27
    DOUBLE          shift and go to state 28

    expression                     shift and go to state 56
    value                          shift and go to state 14
    number                         shift and go to state 16
    aggregate                      shift and go to state 17
    texts                          shift and go to state 18
    int                            shift and go to state 19
    double                         shift and go to state 20

state 39

    (59) expression -> expression / . expression
    (56) expression -> . expression + expression
    (57) expression -> . expression - expression
    (58) expression -> . expression * expression
    (59) expression -> . expression / expression
    (60) expression -> . value
    (41) value -> . number
    (42) value -> . aggregate
    (43) value -> . texts
    (50) number -> . int
    (51) number -> . double
    (26) aggregate -> . SUM LPAR TEXT RPAR
    (27) aggregate -> . AVG LPAR TEXT RPAR
    (28) aggregate -> . MAX LPAR TEXT RPAR
    (29) aggregate -> . MIN LPAR TEXT RPAR
    (30) aggregate -> . COUNT LPAR TEXT RPAR
    (40) texts -> . TEXT
    (52) int -> . INTEGER
    (53) double -> . DOUBLE

    SUM             shift and go to state 21
    AVG             shift and go to state 23
    MAX             shift and go to state 24
    MIN             shift and go to state 25
    COUNT           shift and go to state 26
    TEXT            shift and go to state 22
    INTEGER         shift and go to state 27
    DOUBLE          shift and go to state 28

    expression                     shift and go to state 57
    value                          shift and go to state 14
    number                         shift and go to state 16
    aggregate                      shift and go to state 17
    texts                          shift and go to state 18
    int                            shift and go to state 19
    double                         shift and go to state 20

state 40

    (25) column -> NAME DOT . NAME
